<resources>
    <string name="app_name">City-Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered by Coding Tea, designed by AbdulHameed</string>

    <!-- Strings for OnBoarding screens -->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Description-->
    <string name="first_slide_desc">You can search any place nearby or within specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop and want to be a part of our growing industry, then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket, then you don\'t have to worry about anything. </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let\'s Get Started</string>


    <!-- Strings for Dashboard  -->

    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="school">School</string>

    <!--Titles and Descriptions-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search…</string>


    <!--  Strings for Menu  -->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="education">Education</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>


    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>
    <string name="hospitals">Hospitals</string>
    <string name="retailer_heading">Grow\n Your Business</string>
    <string name="retailer_tag_line">We will help you grow your business using online services</string>
    <string name="sign_up">SIGN UP</string>
    <string name="how_we_work">HOW WE WORK?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="create_account">Create\nAccount</string>
    <string name="enter_full_name">Full Name</string>
    <string name="field_username">Username</string>
    <string name="field_email">Email</string>
    <string name="field_phone_number">Phone Number</string>
    <string name="field_password">Password</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_code_verification">Verification</string>
    <string name="otp_code_description">Enter one time password sent on\n+23490503559</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="make_selection_detail">Select which contact we should use to reset your password</string>
    <string name="via_sms">via sms</string>
    <string name="via_email">via email</string>
    <string name="enter_new_credentials">New\nCredentials</string>
    <string name="new_credentials_details">Your identity hahs been verified\nSet your new password</string>
    <string name="password_update_details">Your password has been updated</string>
</resources>